# searxngcli

./: CLAUDE.md  README.md  pyproject.toml
src/searxngcli/: __init__.py  cli.py  client.py  config.py  context.py  formatter.py  logging.py  models.py
tests/: test_config.py  test_models.py
